Modified version of docker-compose and sample data

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -76,6 +76,10 @@ x-airflow-common:
 services:
   postgres:
     image: postgres:13
+    # ports:
+    #   - 5432:5432
+    expose:
+      - 5432
     environment:
       POSTGRES_USER: airflow
       POSTGRES_PASSWORD: airflow
